get comments and add comment funcs
