# config/config.go
@@ -8,10 +8,13 @@ var PathSignUp = BasePath + "/signup"
 var PathSessions = BasePath + "/session"
 var PathDocs = BasePath + "/docs"
 var PathMain = BasePath + "/products"
+var PathProductByID = BasePath + "/products/{id}"
 var PathCategory = BasePath + "/products/{category}"
+var PathComments = BasePath + "/products/comments/{id}"
 
 var PathProfile = "/profile"
 var PathAvatar = "/avatar"
+var PathMakeComment = "/makecomment"
 
 var PathCart = "/cart"
 var PathAddItemToCart = "/insertintocart"
